tests/ui/from-tryfrom-bits-is-invalid.stderr
error: enum doesn't fill its bitsize
 --> tests/ui/from-tryfrom-bits-is-invalid.rs:4:10
  |
4 | #[derive(FromBits)]
  |          ^^^^^^^^
  |
  = help: you need to use `#[derive(TryFromBits)]` instead, or specify one of the variants as #[fallback]
  = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum fills its bitsize but has fallback variant
  --> tests/ui/from-tryfrom-bits-is-invalid.rs:10:10
   |
10 | #[derive(FromBits)]
   |          ^^^^^^^^
   |
   = help: remove `#[fallback]` from this enum
   = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: TryFromBits only supports unit variants in enums
  --> tests/ui/from-tryfrom-bits-is-invalid.rs:24:5
   |
24 |     S(u6),
   |     ^^^^^
   |
   = help: change this variant to a unit

error: fallback is not allowed with `TryFromBits`
  --> tests/ui/from-tryfrom-bits-is-invalid.rs:28:10
   |
28 | #[derive(TryFromBits)]
   |          ^^^^^^^^^^^
   |
   = help: use `#[derive(FromBits)]` or remove this `#[fallback]`
   = note: this error originates in the derive macro `TryFromBits` (in Nightly builds, run with -Z macro-backtrace for more info)
